# gesture-recognition

./: .gitignore  CMakeLists.txt  CompareImage.cpp  CompareImage.h  FunctionTools.h  GestureRecognition.cbp  GestureRecognition.cpp  GestureRecognition.h  README.md  ShapeSpaceLib_Dist.cpp  ShapeSpaceLib_Dist.h  gesture.cpp  gesture.h  gesture.py  gestures_gpu.cpp  gestures_gpu.h  main.cpp
