cmake_minimum_required(VERSION 2.8)
project( GestureRecognition )
#set(OpenCV_DIR /usr/local/opencv2/share/OpenCV)
find_package( OpenCV REQUIRED )
#set(CMAKE_EXE_LINKER_FLAGS -DCUDA_USE_STATIC_CUDA_RUNTIME=OFF)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
#include_directories(/usr/local/opencv2/include)
#LINK_DIRECTORIES(/usr/local/opencv2/lib)
#include_directories(${OpenCV_INCLUDE_DIRS})
add_executable( main main.cpp gesture.cpp)
target_link_libraries( main ${OpenCV_LIBS} )